--- a/AudioPlayAndRecord/AudioPlayAndRecord/Base.lproj/Main.storyboard
+++ b/AudioPlayAndRecord/AudioPlayAndRecord/Base.lproj/Main.storyboard
@@ -340,6 +340,95 @@
             </objects>
             <point key="canvasLocation" x="-197.10144927536234" y="101.78571428571428"/>
         </scene>
+        <!--Audio Record View Controller-->
+        <scene sceneID="Fks-15-S4F">
+            <objects>
+                <viewController storyboardIdentifier="AudioRecord" id="Hnn-ff-7eb" customClass="AudioRecordViewController" customModule="AudioPlayAndRecord" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Uq-Ip-muY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9IV-ak-RMW">
+                                <rect key="frame" x="0.0" y="44" width="414" height="200"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZIH-L8-lUF">
+                                        <rect key="frame" x="141" y="50" width="132" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="9wW-oA-DOf"/>
+                                            <constraint firstAttribute="width" constant="132" id="R2V-ur-Rj1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OYL-0u-jnb">
+                                        <rect key="frame" x="87" y="134" width="100" height="36"/>
+                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="5Uu-Gn-6Bv"/>
+                                            <constraint firstAttribute="height" constant="36" id="eYx-NW-JEb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <state key="normal" title="START">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="startRecording:" destination="Hnn-ff-7eb" eventType="touchUpInside" id="AcS-Qg-rJ0"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVr-vN-APi">
+                                        <rect key="frame" x="227" y="134" width="100" height="36"/>
+                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="MZy-ET-TDz"/>
+                                            <constraint firstAttribute="width" constant="100" id="NbR-G5-f0t"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <state key="normal" title="STOP">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="stopRecording:" destination="Hnn-ff-7eb" eventType="touchUpInside" id="77Q-0l-fPY"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.12262205792453472" green="0.1299994882911143" blue="0.12826701945146449" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="tVr-vN-APi" secondAttribute="bottom" constant="30" id="GPb-N8-QcW"/>
+                                    <constraint firstAttribute="bottom" secondItem="OYL-0u-jnb" secondAttribute="bottom" constant="30" id="Hun-5m-XUZ"/>
+                                    <constraint firstItem="OYL-0u-jnb" firstAttribute="centerX" secondItem="9IV-ak-RMW" secondAttribute="centerX" constant="-70" id="Lb4-HI-0B3"/>
+                                    <constraint firstItem="ZIH-L8-lUF" firstAttribute="top" secondItem="9IV-ak-RMW" secondAttribute="top" constant="50" id="bJj-vM-f1I"/>
+                                    <constraint firstItem="tVr-vN-APi" firstAttribute="centerX" secondItem="9IV-ak-RMW" secondAttribute="centerX" constant="70" id="iLc-Qk-XgQ"/>
+                                    <constraint firstAttribute="height" constant="200" id="pvM-qR-6WC"/>
+                                    <constraint firstItem="ZIH-L8-lUF" firstAttribute="centerX" secondItem="9IV-ak-RMW" secondAttribute="centerX" id="uCT-AM-DFW"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8vJ-7S-aHi">
+                                <rect key="frame" x="0.0" y="244" width="414" height="618"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dET-OS-qcg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8vJ-7S-aHi" firstAttribute="top" secondItem="dET-OS-qcg" secondAttribute="top" constant="200" id="Gs4-pI-V0N"/>
+                            <constraint firstItem="9IV-ak-RMW" firstAttribute="top" secondItem="dET-OS-qcg" secondAttribute="top" id="NyL-1o-KlJ"/>
+                            <constraint firstItem="dET-OS-qcg" firstAttribute="trailing" secondItem="9IV-ak-RMW" secondAttribute="trailing" id="Wox-L8-lTG"/>
+                            <constraint firstItem="dET-OS-qcg" firstAttribute="trailing" secondItem="8vJ-7S-aHi" secondAttribute="trailing" id="dnb-4R-AsX"/>
+                            <constraint firstItem="dET-OS-qcg" firstAttribute="bottom" secondItem="8vJ-7S-aHi" secondAttribute="bottom" id="kGF-8j-o79"/>
+                            <constraint firstItem="9IV-ak-RMW" firstAttribute="leading" secondItem="dET-OS-qcg" secondAttribute="leading" id="og4-RJ-1Fv"/>
+                            <constraint firstItem="8vJ-7S-aHi" firstAttribute="leading" secondItem="dET-OS-qcg" secondAttribute="leading" id="rLw-b5-hgW"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="8vJ-7S-aHi" id="WVf-dK-oKf"/>
+                        <outlet property="timeLabel" destination="ZIH-L8-lUF" id="mIP-dT-apj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MOk-xA-umX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3170" y="102"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bass" width="200" height="128"/>
